Closed Bug 1592350 Opened 6 years ago Closed 6 years ago

[Wayland] Firefox content window is moved when launched in normal (non-maximized) mode.

Categories

(Core :: Widget: Gtk, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla72
Tracking Status
firefox-esr68 --- unaffected
firefox70 --- unaffected
firefox71 --- fixed
firefox72 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file)

Firefox content window is moved when launched in normal (non-maximized) mode. Affects basic and GL compositor.

This is a regression from Bug 1587008 - but it was partially broken before it, the content was rendered moved but it was corrected after while...so fix at Bug 1587008 reveals this misbehavior.

Bugbug thinks this bug is a regression, but please revert this change in case of error.

Keywords: regression
Pushed by ncsoregi@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5aac68cd0f8b [Wayland] Call wl_surface_commit() on parent surface when subsurface position is updated, r=jhorak
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72

Comment on attachment 9105283 [details]
Bug 1592350 [Wayland] Call wl_surface_commit() on parent surface when subsurface position is updated, r=jhorak

Beta/Release Uplift Approval Request

  • User impact if declined: Window position is incorrect on Wayland.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): linux/wayland only.
  • String changes made/needed: none
Attachment #9105283 - Flags: approval-mozilla-beta?
Regressions: 1593408

Martin, is the regression caused by this patch in bug 1593408 a bigger problem than the one fixed here?

Flags: needinfo?(stransky)

(In reply to Pascal Chevrel:pascalc from comment #7)

Martin, is the regression caused by this patch in bug 1593408 a bigger problem than the one fixed here?

I don't think so, looks like insufficient fix for this one for some setup (I'm unable to reproduce Bug 1593408). I'd uplift this one and I'm going to investigate/fix Bug 1593408.

Flags: needinfo?(stransky)

Comment on attachment 9105283 [details]
Bug 1592350 [Wayland] Call wl_surface_commit() on parent surface when subsurface position is updated, r=jhorak

Wayland fix regression, we don't ship it yet officially so this is low risk but it matters for users on Wayland, especially on Fedora, uplift approved for 71 beta 8.

Attachment #9105283 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Regressions: 1601082
Regressions: 1604948
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: