Bug 1592350 [Wayland] Call wl_surface_commit() on parent surface when subsurface position is updated, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D51133