widget/gtk/mozcontainer.h
@@ -75,9 +75,11 @@ struct _MozContainer {
 #ifdef MOZ_WAYLAND
   struct wl_surface* surface;
   struct wl_subsurface* subsurface;
+  int subsurface_dx, subsurface_dy;
   struct wl_egl_window* eglwindow;
   struct wl_callback* frame_callback_handler;
   int frame_callback_handler_surface_id;
+  gboolean surface_position_update;
   gboolean surface_needs_clear;
   gboolean ready_to_draw;
   std::function<void(void)> inital_draw_cb;
